Avalara Fullqa/src/CloudCraze/objects/E_Category__c.object
<CustomObject>
    <description>Product Category detail record</description>
    <fields>
        <fullName>CategoryID__c</fullName>
        <description>External Id used for mapping the category to an externally defined entity</description>
        <externalId>true</externalId>
        <label>Category ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ChildCategoryCount__c</fullName>
        <description>Formula - set to the number of child categories within this category</description>
        <label>Child Category Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The end date for which this category is active. After this date the category will no longer be displayed.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LongDescRT__c</fullName>
        <description>Long description as a rich text field</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LongDesc__c</fullName>
        <description>Long description of the category, usually containing more formatted marketing content.</description>
        <label>Long Desc</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used when building a category hierarchy. Contains a reference to this same object, pointing to the parent of this entry</description>
        <label>Parent Category</label>
        <referenceTo>E_Category__c</referenceTo>
        <relationshipLabel>E_Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <description>Formula - set to the number of products within the category</description>
        <label>Product Count</label>
        <summaryForeignKey>E_ProductCategory__c.Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Used for ordering categories within a parent category</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortDescRT__c</fullName>
        <description>Short category description as a rich text field.</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShortDesc__c</fullName>
        <description>Short description of the category</description>
        <label>Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this category is active. This is the first date the category will be displayed.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CategoryID__c</columns>
        <columns>NAME</columns>
        <columns>ParentCategory__c</columns>
        <columns>ProductCount__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>